Refactor `isRedactionMessage` to RedactionsContext. Add tests for refactored method. Move constant strings to RedactionsContext for reusability.